# turbo-orm

./: CLAUDE.md  README.md  justfile  plan.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
sample_project/: benchmark.html  pyproject.toml
sample_project/article/: models.py  views.py
sample_project/article/migrations/: 0001_initial.py
sample_project/config/: api.py  settings.py  urls.py
scripts/: setup_test_db.py
src/turbo_orm/: __init__.py  apps.py  exceptions.py  execution.py  manager.py  models.py  queryset.py  utils.py
tests/: conftest.py  models.py  settings.py  test_advanced_async.py  test_async_orm.py  test_django_async_compat.py
tests/migrations/: 0001_initial.py
